[metadata]
name = darjeeling-ardupilot
version = 0.0.1
author = Christopher Timperley
author-email = christimperley@googlemail.com
url = https://github.com/ChrisTimperley/darjeeling-ardupilot

[options]
include_package_data = True
python_requires = >= 3.5
install_requires =
  attrs ~= 19.3.0
  dronekit ~= 2.9.2
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True

[tox]
envlist = py37, py38

[testenv]
deps =
  mypy
  pycodestyle
commands =
  pycodestyle src
  mypy src
